--- a/diensten/index.html
+++ b/diensten/index.html
@@ -3,40 +3,95 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diensten voor KMO’s: Marketing & Consultancy | Buscemi Group</title>
- <meta name="description" content="Ontdek onze diensten voor KMO’s: marketing die resultaat oplevert en consultancy die kosten verlaagt en processen optimaliseert." />
 
-  <link rel="canonical" href="https://www.buscemigroup.be/diensten/" />
+  <title>Diensten voor KMO’s: Marketing & Consultancy | Buscemi Group</title>
+  <meta name="description" content="Ontdek onze diensten voor KMO’s: marketing die resultaat oplevert en consultancy die kosten verlaagt en processen optimaliseert." />
+  <link rel="canonical" href="https://buscemigroup.be/diensten/" />
   <meta name="theme-color" content="#0d1425" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/utilities.css" />
 
-  <!-- Open Graph -->
+  <!-- Icons & PWA -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://buscemigroup.be/diensten/" />
+  <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Diensten voor KMO’s | Buscemi Group" />
   <meta property="og:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
+  <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
+  <meta property="og:locale" content="nl_BE" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Diensten voor KMO’s | Buscemi Group" />
+  <meta name="twitter:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
+  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- JSON-LD: Breadcrumbs -->
+  <!-- Breadcrumb structured data -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.buscemigroup.be/"},
-      {"@type":"ListItem","position":2,"name":"Diensten","item":"https://www.buscemigroup.be/diensten/"}
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://buscemigroup.be/"},
+      {"@type":"ListItem","position":2,"name":"Diensten","item":"https://buscemigroup.be/diensten/"}
     ]
   }
   </script>
+
+  <!-- Skip-link styling -->
+  <style>
+    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
+    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+  </style>
 </head>
 <body>
-  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
+  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
+  <!-- Header/nav -->
   <header class="site-header">
     <div class="container nav">
-      <a class="brand" href="/" aria-label="Buscemi Group home">
-        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" />
+      <a class="brand" href="/">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-      <a class="btn primary-cta" href="/#contact">Plan kennismaking</a>
+
+      <button class="burger"
+              data-nav-toggle
+              aria-label="Hoofdmenu"
+              aria-expanded="false"
+              aria-controls="site-menu">☰</button>
+
+      <nav id="site-menu"
+           class="nav-links"
+           data-nav-menu
+           aria-label="Hoofdnavigatie"
+           aria-hidden="true">
+        <ul class="menu">
+          <li><a href="/over.html" data-nav-link>Over</a></li>
+          <li>
+            <details class="dropdown" open>
+              <summary>Diensten</summary>
+              <ul class="submenu">
+                <li><a href="/diensten/marketing.html" data-nav-link>Marketing</a></li>
+                <li><a href="/diensten/consultancy.html" data-nav-link>Consultancy</a></li>
+              </ul>
+            </details>
+          </li>
+          <li><a href="/insights/index.html" data-nav-link>Insights</a></li>
+          <li><a href="/contact.html" data-nav-link>Contact</a></li>
+        </ul>
+      </nav>
+
+      <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
   </header>
 
@@ -50,13 +105,11 @@
       </ol>
     </nav>
 
-    <!-- HERO / Intro -->
-    <section class="hero container">
-      <div class="grid-2">
-        <div>
-          <h1>Diensten voor <span class="accent">ambitieuze KMO’s</span></h1>
-          <p>Heldere strategie, praktische uitvoering en meetbare KPI’s. Kies wat je nu het meest vooruit helpt — we stemmen de scope en snelheid af op je doelen.</p>
-        </div>
+    <!-- HERO -->
+    <section class="subpage-hero">
+      <div class="container">
+        <h1>Diensten voor <span class="accent">ambitieuze KMO’s</span></h1>
+        <p class="sub mx-auto max-w-760">Heldere strategie, praktische uitvoering en meetbare KPI’s. Kies wat je nu het meest vooruit helpt — we stemmen scope en tempo af op jouw doelen.</p>
       </div>
     </section>
 
@@ -67,7 +120,7 @@
         <article class="card pad tile">
           <h3>Marketing</h3>
           <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
-          <ul class="muted" style="margin-top:8px">
+          <ul class="muted mt-8">
             <li>Content & social</li>
             <li>Campagnes & advertenties</li>
             <li>Rapportage & optimalisatie</li>
@@ -78,7 +131,7 @@
         <article class="card pad tile">
           <h3>Consultancy</h3>
           <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat je meteen kan uitvoeren.</p>
-          <ul class="muted" style="margin-top:8px">
+          <ul class="muted mt-8">
             <li>Kostenoptimalisatie</li>
             <li>Procesverbetering</li>
             <li>Roadmap & KPI’s</li>
@@ -88,7 +141,7 @@
       </div>
     </section>
 
-    <!-- Werkwijze (kort) -->
+    <!-- Werkwijze -->
     <section class="container mt-20" aria-labelledby="werkwijze">
       <h2 id="werkwijze" class="center">Onze werkwijze</h2>
       <div class="grid-3 mt-24">
@@ -98,7 +151,7 @@
       </div>
     </section>
 
-    <!-- Mini-FAQ -->
+    <!-- FAQ -->
     <section class="container mt-20" aria-labelledby="faq">
       <h2 id="faq" class="center">Veelgestelde vragen</h2>
       <div class="grid-2 mt-12">
@@ -125,20 +178,34 @@
     <section class="container my-60">
       <div class="cta center">
         <p><strong>Wil je weten wat voor jouw KMO het meeste oplevert?</strong></p>
-        <a class="btn" href="/#contact">Plan kennismaking</a>
+        <a class="btn" href="/contact.html">Plan kennismaking</a>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group</div>
-      <div class="muted"><a href="/legal.html">Privacy & Voorwaarden</a></div>
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted">
+        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+      </div>
     </div>
   </footer>
 
+  <!-- Scripts -->
+  <script src="/cookie.js" defer></script>
+  <script src="/js/analytics.js" defer></script>
+  <script src="/nav.js" defer></script>
+
+  <!-- Jaar in footer -->
   <script>
-    (function(){var y=document.getElementById("year");if(y)y.textContent=new Date().getFullYear();})();
+    document.addEventListener('DOMContentLoaded', function () {
+      var y = document.getElementById('year');
+      if (y) y.textContent = new Date().getFullYear();
+    });
   </script>
+
+  <!-- No-JS fallback -->
+  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
