--- a/insights/kosten-besparen-met-data.html
+++ b/insights/kosten-besparen-met-data.html
@@ -1,76 +1,126 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Kosten besparen met data — Insights | Buscemi Group</title>
-<meta name="description" content="Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige analyses."/>
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="../style.css"/>
-<link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Kosten besparen met data — Buscemi Group"/>
-<meta property="og:description" content="Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige analyses."/>
-<meta property="og:type" content="article"/>
-<meta property="og:url" content="https://www.buscemigroup.be/insights/kosten-besparen-met-data.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/insights/kosten-besparen-met-data.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Kosten besparen met data — Insights | Buscemi Group</title>
+  <meta name="description" content="Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige analyses." />
+  <link rel="canonical" href="https://www.buscemigroup.be/insights/kosten-besparen-met-data.html" />
+  <meta name="theme-color" content="#0d1425" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="/style.css" />
+
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://www.buscemigroup.be/insights/kosten-besparen-met-data.html" />
+  <meta property="og:site_name" content="Buscemi Group" />
+  <meta property="og:title" content="Kosten besparen met data — Buscemi Group" />
+  <meta property="og:description" content="Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige analyses." />
+  <meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png" />
+  <meta property="og:locale" content="nl_BE" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kosten besparen met data — Buscemi Group" />
+  <meta name="twitter:description" content="Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige analyses." />
+  <meta name="twitter:image" content="https://www.buscemigroup.be/assets/og-image.png" />
+  
+  <style>
+    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
+    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+  </style>
 </head>
 <body>
+  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="../index.html"><img src="../assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="../over.html">Over</a>
-      <div class="dropdown">
-        <a href="../diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="../diensten/marketing.html">Marketing</a>
-          <a href="../diensten/consultancy.html">Consultancy</a>
-        </div>
-      </div>
-      <a href="../insights/index.html">Insights</a>
-      <a href="../contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="../contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
+      </a>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Kosten besparen met data</h1>
-    <p class="sub">Snel zicht op je kostenhefbomen met een eenvoudige scan.</p>
-  </section>
-  <article style="padding:32px 0;max-width:800px;margin:0 auto">
-    <p class="muted">Leestijd: 4 min • Categorie: Consultancy</p>
-    <h3>1) Categoriseer uitgaven</h3>
-    <p>Groepeer kosten (media, tools, logistiek) en identificeer de grootste posten.</p>
-    <h3>2) Quick wins eerst</h3>
-    <p>Onderhandel licenties, schrap onbenutte tools en optimaliseer media-waste.</p>
-    <h3>3) Dashboards</h3>
-    <p>Monitor maand-op-maand KPI’s (CAC, marge, voorraadrotatie) en maak eigenaarschap duidelijk.</p>
-    <h3>4) Test & learn</h3>
-    <p>Voer gecontroleerde experimenten uit en schaal alleen wat rendeert.</p>
-    <div class="cta" style="margin-top:36px">
-      <p><strong>Ook besparen met betere inzichten?</strong> We helpen je graag op weg.</p>
-      <a class="btn" href="../contact.html">Plan gesprek</a>
+      <button class="burger"
+              data-nav-toggle
+              aria-label="Hoofdmenu"
+              aria-expanded="false"
+              aria-controls="site-menu">☰</button>
+
+      <nav id="site-menu"
+           class="nav-links"
+           data-nav-menu
+           aria-label="Hoofdnavigatie"
+           aria-hidden="true">
+        <ul class="menu">
+          <li><a href="/over.html" data-nav-link>Over</a></li>
+          <li>
+            <details class="dropdown">
+              <summary>Diensten</summary>
+              <ul class="submenu">
+                <li><a href="/diensten/marketing.html" data-nav-link>Marketing</a></li>
+                <li><a href="/diensten/consultancy.html" data-nav-link>Consultancy</a></li>
+              </ul>
+            </details>
+          </li>
+          <li><a href="/insights/" data-nav-link>Insights</a></li>
+          <li><a href="/contact.html" data-nav-link>Contact</a></li>
+        </ul>
+      </nav>
+
+      <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
-  </article>
-</main>
+  </header>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="../legal.html">Privacy</a> • <a href="../legal.html">Cookies</a> • <a href="../legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="../cookie.js"></script>
-<script src="../nav.js"></script>
+  <main id="main">
+    <section class="subpage-hero">
+      <div class="container">
+        <h1>Kosten besparen met data</h1>
+        <p class="sub">Snel zicht op je kostenhefbomen met een eenvoudige scan.</p>
+      </div>
+    </section>
+    
+    <article class="container" style="padding-top: 32px; padding-bottom: 32px; max-width: 800px; margin-left: auto; margin-right: auto;">
+      <p class="muted">Leestijd: 4 min • Categorie: Consultancy</p>
+      <h3>1) Categoriseer uitgaven</h3>
+      <p>Groepeer kosten (media, tools, logistiek) en identificeer de grootste posten.</p>
+      <h3>2) Quick wins eerst</h3>
+      <p>Onderhandel licenties, schrap onbenutte tools en optimaliseer media-waste.</p>
+      <h3>3) Dashboards</h3>
+      <p>Monitor maand-op-maand KPI’s (CAC, marge, voorraadrotatie) en maak eigenaarschap duidelijk.</p>
+      <h3>4) Test & learn</h3>
+      <p>Voer gecontroleerde experimenten uit en schaal alleen wat rendeert.</p>
+      <div class="cta" style="margin-top:36px">
+        <p><strong>Ook besparen met betere inzichten?</strong> We helpen je graag op weg.</p>
+        <a class="btn" href="/contact.html">Plan gesprek</a>
+      </div>
+    </article>
+  </main>
 
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted">
+        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/cookie.js" defer></script>
+  <script src="/js/analytics.js" defer></script>
+  <script src="/nav.js" defer></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var y = document.getElementById('year');
+      if (y) y.textContent = new Date().getFullYear();
+    });
+  </script>
+
+  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
